relative path for loading image

--- a/components/static-map.html
+++ b/components/static-map.html
@@ -34,7 +34,7 @@
         basemap_type:String,
         image_url:{
           type: String,
-          value: "/images/squares.gif"
+          value: "images/squares.gif"
         }
       },
       ready:function(){
@@ -68,7 +68,7 @@
         }
       },
       create_anon_map:function(){
-          this.image_url ='/images/squares.gif'
+          this.image_url ='images/squares.gif'
           if (this.user && this.css !=''){
 
             params = {
