adding head tails

--- a/components/color-matrix-app.html
+++ b/components/color-matrix-app.html
@@ -72,7 +72,7 @@
         user: String,
         binTypes:{
           type : Array,
-          value: ['jenks','quantiles','equal']
+          value: ['jenks','quantiles','equal', 'headtails']
         },
         baseMaps:{
           type : Array,
