--- a/components/row-map-regions.html
+++ b/components/row-map-regions.html
@@ -22,6 +22,7 @@
         margin-right:20px;
       }
     </style>
+    <p>{{css}}</p>
 
     <div class='maps'>
       <template is="dom-repeat" items="{{regions}}">
