--- a/components/row-map-regions.html
+++ b/components/row-map-regions.html
@@ -5,7 +5,7 @@
   <template>
     <style>
       :host {
-        height: 700px;
+        min-height: 500px;
         display:flex;
         flex-direction: column;
       }
@@ -17,9 +17,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-      },
-      .map{
-        margin-right:20px;
       }
     </style>
     <p>{{css}}</p>
